@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>libraries-bytecode</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>libraries-bytecode</name>
     <packaging>jar</packaging>
+    <name>libraries-bytecode</name>
 
     <parent>
         <groupId>com.baeldung</groupId>
@@ -49,15 +49,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-                        --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
                         --add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
